[package]
name = "vayne"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4", features = ["rustls"] } 
actix-files = "0.6.0"
actix-web-lab = "0.15.0"
env_logger = "0.9.0"
log = "0.4.16"
rustls = "0.20.4"
rustls-pemfile = "0.3.0"
certbot = "0.1.0"
