[package]
name = "vayne"
version = "0.1.0"
edition = "2021"
description = "vayne is a blazing fast web server 🎩"
repository = "https://github.com/AuracleTech/vayne"
license = "MIT"

[dependencies]
actix-web = { version = "4", features = ["rustls"] } 
actix-files = "0.6.0"
actix-web-lab = "0.15.0"
env_logger = "0.9.0"
log = "0.4.16"
rustls = "0.20.4"
rustls-pemfile = "0.3.0"